# Tharunpp

./: .gitignore  .pre-commit-config.yaml  3.8.1  CHANGELOG.md  CLEANUP_SUMMARY.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_NOW.md  EXAMPLES_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  PACKAGE_CLEANUP.txt  QUICKSTART.md  README.md  READY_TO_PUSH.md  cleanup.bat  deploy.bat  prepare_push.bat  pyproject.toml  requirements.txt  run_example.bat  setup_venv.bat  tharunpp_cli.py  verify_all.py
.github/workflows/: release.yml  test.yml
Tharunpp/: __init__.py  __main__.py  runner.py  token.yml
Tharunpp/cli/: __init__.py  main.py
Tharunpp/core/: __init__.py  interpreter.py  tharunpp.lark
examples/: calculator.tpp  error_handling.tpp  for_loop.tpp  func_main.tpp  func_main_no_args.tpp  functions.tpp  hello.tpp  hello_world.tpp  if_conditional.tpp  if_statements.tpp  lists.tpp  logical_opers.tpp  math_ops.tpp  multiple_print.tpp  while_loop.tpp
tests/: test_interpreter.py
