[tool.poetry]
name = "Tharunpp"
version = "1.0.0"
description = "Tharun++(Tharunpp) is a programming language based on the famous comedy dialogues of Tamil cinema industry."
authors = ["Tharun Kumar <tharunkumarvmt@gmail.com>"]
license = "MIT License"
readme = "README.md"

homepage = "https://github.com/Tharun007-TK/Tharunpp/tree/main"
repository = "https://github.com/Tharun007-TK/Tharunpp/tree/main/Tharunpp"
documentation = "https://github.com/Tharun007-TK/Tharunpp#readme"

keywords = ["esolang", "interpreter", "lark", "Tharunpp", "thala"]

classifiers = [
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[tool.poetry.dependencies]
python = ">=3.8.1"
lark = "^1.1.9"
loguru = "^0.6.0"
typer = "^0.4.1"


[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tharunpp = "Tharunpp.cli.main:app"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version",
    "Tharunpp/__init__.py:__version__"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_subject = "Bump to {version}"
commit_message = "Bump to {version}"

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E203", "E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
